# handelsregister-mcp

./: .gitignore  CONTRIBUTING.md  NOTICE  PUBLISHING.md  README.md  pyproject.toml  server.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/: claude_desktop_config.json
src/handelsregister_mcp/: __init__.py  client.py  llm.py  ocr.py  parsers.py  ratelimit.py  server.py
tests/: test_parsers.py  test_ratelimit.py  test_server_helpers.py
